# MouseFly

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
crates/mousefly-app/: Cargo.toml  Info.plist  tauri.conf.json
crates/mousefly-app/capabilities/: default.json
crates/mousefly-app/icons/: _render.py  icon.icns
crates/mousefly-app/src/: clipboard.rs  layout.rs  main.rs  pairing.rs
crates/mousefly-core/: Cargo.toml
crates/mousefly-core/src/: keymap.rs  lib.rs
crates/mousefly-discovery/: Cargo.toml
crates/mousefly-discovery/src/: lib.rs
crates/mousefly-input/: Cargo.toml
crates/mousefly-input/src/: lib.rs  macos.rs  stub.rs  windows.rs
crates/mousefly-net/: Cargo.toml
crates/mousefly-net/src/: lib.rs
crates/mousefly-pair/: Cargo.toml
crates/mousefly-pair/src/: handshake.rs  identity.rs  lib.rs  store.rs
scripts/: start.sh  test.sh
src-ui/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
src-ui/src/: App.vue  main.ts  styles.css
src-ui/src/components/: MonitorCanvas.vue
src-ui/src/i18n/: index.ts
src-ui/src/i18n/locales/: en.ts  ja.ts  ru.ts  zh-CN.ts  zh-HK.ts  zh-TW.ts
src-ui/src/ipc/: index.ts
src-ui/src/stores/: layout.ts  link.ts  log.ts  pairing.ts
src-ui/src/views/: LayoutView.vue  LinkView.vue  LogView.vue  PairingView.vue  SessionView.vue
