[workspace]
resolver = "2"
members = [
    "crates/mousefly-core",
    "crates/mousefly-input",
    "crates/mousefly-net",
    "crates/mousefly-discovery",
    "crates/mousefly-pair",
    "crates/mousefly-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["MouseFly contributors"]
rust-version = "1.75"

[workspace.dependencies]
mousefly-core = { path = "crates/mousefly-core" }
mousefly-input = { path = "crates/mousefly-input" }
mousefly-net = { path = "crates/mousefly-net" }
mousefly-discovery = { path = "crates/mousefly-discovery" }
mousefly-pair = { path = "crates/mousefly-pair" }

serde = { version = "1", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
crossbeam-channel = "0.5"
clap = { version = "4", features = ["derive"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
rcgen = "0.13"
rand = "0.8"
spake2 = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
mdns-sd = "0.13"
hex = "0.4"
sha2 = "0.10"
arboard = { version = "3", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
