[package]
name = "mousefly-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mousefly"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mousefly-core = { workspace = true }
mousefly-input = { workspace = true }
mousefly-net = { workspace = true }
mousefly-discovery = { workspace = true }
mousefly-pair = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
hex = { workspace = true }
hostname = "0.4"
tauri = { version = "2", features = [] }
