[package]
name = "mousefly-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mousefly-core = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
flume = { version = "0.11", default-features = false }
