[package]
name = "mousefly-input"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mousefly-core = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
