[package]
name = "mousefly-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mousefly-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
