[package]
name = "mousefly-pair"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mousefly-core = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
spake2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
bincode = { workspace = true }
rcgen = { workspace = true }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-util"] }
